Chỉnh sửa khoa + bộ môn
Xong

--- a/HelloWorldReact/Views/Faculty/Index.cshtml
+++ b/HelloWorldReact/Views/Faculty/Index.cshtml
@@ -51,10 +51,7 @@
                     "url": '/faculty/GetDataByKey/',
                     "type": 'POST',
                     "data": { key: key },
-                    "dataType": "text",
-                    "success": function (data) {
-                        alert(data);
-                    }
+                    "dataType": "json"
                 },
                 "columns": [
                     {
